[package]
name = "spotify"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyrun-plugin = "0.1.0"
abi_stable = "0.11.1"
rspotify = {version = "0.13.2", default-features = false, features = ["client-ureq", "ureq-rustls-tls"]}
ron = "0.8.0"
serde = { version = "1.0.152", features = ["derive"] }